[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemies/Core/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/Core/ComplexEnemy.gd" type="Script" id=2]
[ext_resource path="res://DirectionalAnimationStateMachine.tres" type="AnimationNodeStateMachine" id=3]
[ext_resource path="res://WhiteColor.shader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/active = false

[sub_resource type="Animation" id=2]
resource_name = "Start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="AnimationNodeStateMachinePlayback" id=4]

[node name="ComplexEnemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="." index="7"]
material = SubResource( 1 )

[node name="InvincibilityAnimationPlayer" type="AnimationPlayer" parent="." index="9"]
autoplay = "Stop"
anims/Start = SubResource( 2 )
anims/Stop = SubResource( 3 )

[node name="AnimationTree" type="AnimationTree" parent="." index="10"]
tree_root = ExtResource( 3 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 4 )
parameters/Attack/blend_position = Vector2( 0, 1 )
parameters/Idle/blend_position = Vector2( 0, 1 )
parameters/Roll/blend_position = Vector2( 0, 1 )
parameters/Run/blend_position = Vector2( 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="11"]

[node name="ChasePlayerPathfindTimer" parent="." index="12"]
wait_time = 0.5

[node name="AttackTimer" type="Timer" parent="." index="14"]
one_shot = true
autostart = true
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
